syntax = "proto3";

package pb;

import "google/api/annotations.proto";

message Goods {
  uint64 ID = 1;
  string Name = 2;
  string Bn = 3;
  double Price = 4;
  string Pic = 5;
  string Content = 6;
  int64 CreateTime = 7;
  int64 UpdateTime = 8;
}

message IDRequest { uint64 ID = 1; }

message PageRequest {
  uint32 PageIndex = 1;
  uint32 PageSize = 2;
}

// The greeting service definition.
service GoodsSvc {
  // Sends a greeting
  rpc Create(Goods) returns (BaseResponse) {
    option (google.api.http) = {
      post : "/v1/goods"
      body : "*"
    };
  }
  rpc Update(Goods) returns (BaseResponse) {
    option (google.api.http) = {
      put : "/v1/goods"
      body : "*"
    };
  }
  rpc Delete(Goods) returns (BaseResponse) {
    option (google.api.http) = {
      delete : "/v1/goods"
    };
  }
  rpc Get(IDRequest) returns (GoodsResponse) {
    option (google.api.http) = {
      get : "/v1/goods/{ID}"
    };
  }
  rpc List(PageRequest) returns (GoodsListResponse) {
    option (google.api.http) = {
      get : "/v1/goods"
    };
  }
}

// The response message containing the greetings
message BaseResponse {
  string RequestID = 1;
  bool Status = 2;
  string Code = 3;
  string Msg = 4;
}

message GoodsResponse {
  BaseResponse BaseResponse = 1;
  Goods Data = 2;
}
message GoodsListResponse {
  BaseResponse BaseResponse = 1;
  uint64 Total = 2;
  repeated Goods Data = 3;
}